--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "export": "next export",
-    "deploy": "npm run build && npm run export"
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
     "classnames": "^2.3.1",
